--- a/src/robotdefinitionsample/FXMLDocument.fxml
+++ b/src/robotdefinitionsample/FXMLDocument.fxml
@@ -6,7 +6,7 @@
 
 <AnchorPane id="AnchorPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="robotdefinitionsample.FXMLDocumentController">
    <children>
-      <GridPane fx:id="grid" gridLinesVisible="true" layoutX="14.0" layoutY="14.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0">
+      <GridPane fx:id="grid" gridLinesVisible="true" layoutX="14.0" layoutY="14.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="50.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -31,9 +31,7 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
-         <children>
-            <Label fx:id="Robot" onDragDetected="#doStuff" text="Robot" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-         </children>
       </GridPane>
+      <Button fx:id="Tick" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#onClick" text="Tick" />
    </children>
 </AnchorPane>
